TestSuite/Verification/Error/Parallel/Correctness/On-Device/Intra-Region/Accelerator/out/includes/StencilNestedTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef StencilNestedTest_HXX
#define StencilNestedTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif